cmake_minimum_required(VERSION 3.5)
project(cdt-cpp)
set(CMAKE_RANLIB llvm-ranlib)
add_subdirectory(src/lib/libc)
add_subdirectory(src/lib/libc++)
add_subdirectory(src/lib/boost)
add_subdirectory(src/lib/ontoalloc)
add_subdirectory(src/lib/libase58)
add_subdirectory(src/lib/libuiltins)
add_subdirectory(src/include)
add_subdirectory(src/program)
